unpackaged/main/default/objects/Enrollment_Record__c/fields/Z_Confirmed_Second_Semester__c.field-meta.xml
<CustomField>
    <fullName>Z_Confirmed_Second_Semester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Confirmed Second Semester</label>
    <referenceTo>Semester__c</referenceTo>
    <relationshipLabel>Enrollment Records (Confirmed Second Semester)</relationshipLabel>
    <relationshipName>Enrollment_Records1</relationshipName>
    <type>Lookup</type>
</CustomField>