unpackaged/main/default/objects/Enrollment_Record__c/fields/z_Email__c.field-meta.xml
<CustomField>
    <fullName>z_Email__c</fullName>
    <formula>Opportunity__r.z_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>To update go to the Student&#39;s Opportunity.</inlineHelpText>
    <label>z_Email</label>
    <type>Text</type>
</CustomField>