unpackaged/main/default/objects/Enrollment_Record__c/fields/Z_Financial_Appeal_Document__c.field-meta.xml
<CustomField>
    <fullName>Z_Financial_Appeal_Document__c</fullName>
    <label>Z_Financial Appeal Document</label>
    <type>Date</type>
</CustomField>