unpackaged/main/default/objects/Enrollment_Record__c/fields/Z_Financial_Appeal_Supporting_Details__c.field-meta.xml
<CustomField>
    <fullName>Z_Financial_Appeal_Supporting_Details__c</fullName>
    <label>Z_Financial Appeal Supporting Details</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>