unpackaged/main/default/objects/Enrollment_Record__c/fields/Z_Hobbies_and_Activities__c.field-meta.xml
<CustomField>
    <fullName>Z_Hobbies_and_Activities__c</fullName>
    <label>Z_Hobbies and Activities</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>