unpackaged/main/default/objects/Enrollment_Record__c/fields/z_hool_Choice_2_Why__c.field-meta.xml
<CustomField>
    <fullName>z_hool_Choice_2_Why__c</fullName>
    <label>z_Partner School Choice 2: Why</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>