unpackaged/main/default/objects/Enrollment_Record__c/fields/z_HospitalizedMental_Health_Substance__c.field-meta.xml
<CustomField>
    <fullName>z_HospitalizedMental_Health_Substance__c</fullName>
    <label>z_Hospitalized for Mental Health/Subs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>