unpackaged/main/default/objects/Enrollment_Record__c/fields/z_HS_Experience_Notes__c.field-meta.xml
<CustomField>
    <fullName>z_HS_Experience_Notes__c</fullName>
    <label>z_HS Experience Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>