unpackaged/main/default/objects/Enrollment_Record__c/fields/z_Include_Test_Scores_in_Applications__c.field-meta.xml
<CustomField>
    <fullName>z_Include_Test_Scores_in_Applications__c</fullName>
    <label>z_Include Test Scores in Applications</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>