unpackaged/main/default/objects/Enrollment_Record__c/fields/z_Interested_in_Non_Partner_Schools__c.field-meta.xml
<CustomField>
    <fullName>z_Interested_in_Non_Partner_Schools__c</fullName>
    <label>z_Interested in Non-Partner Schools?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>