unpackaged/main/default/objects/Enrollment_Record__c/fields/z_Is_GPA_Accurate_Reflection__c.field-meta.xml
<CustomField>
    <fullName>z_Is_GPA_Accurate_Reflection__c</fullName>
    <label>z_Is GPA Accurate Reflection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>