unpackaged/main/default/objects/Enrollment_Record__c/fields/z_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>z_Last_Name__c</fullName>
    <formula>Student_Account__r.Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>To update go to the Student&#39;s Account</inlineHelpText>
    <label>z_Last Name</label>
    <type>Text</type>
</CustomField>