unpackaged/main/default/objects/Enrollment_Record__c/fields/z_Life_threatening_Allergies__c.field-meta.xml
<CustomField>
    <fullName>z_Life_threatening_Allergies__c</fullName>
    <label>z_Life-threatening Allergies?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes allergies, but not life-threatening.</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>