unpackaged/main/default/objects/Enrollment_Record__c/fields/z_Move_Forward_With_Applications__c.field-meta.xml
<CustomField>
    <fullName>z_Move_Forward_With_Applications__c</fullName>
    <label>z_Move Forward With Applications?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, please send my application to these schools.</fullName>
            </value>
            <value>
                <fullName>Maybe - I would like my list reviewed by a College Counselor before confirming.</fullName>
            </value>
            <value>
                <fullName>Maybe - I would like additional feedback and guidance on my selections before confirming.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>