unpackaged/main/default/objects/Enrollment_Record__c/fields/z_Non_Partner_School_2__c.field-meta.xml
<CustomField>
    <fullName>z_Non_Partner_School_2__c</fullName>
    <label>z_Non-Partner School 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>