unpackaged/main/default/objects/Enrollment_Record__c/fields/z_Number_of_Verto_Semesters__c.field-meta.xml
<CustomField>
    <fullName>z_Number_of_Verto_Semesters__c</fullName>
    <label>z_Number of Verto Semesters</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Semester Only</fullName>
            </value>
            <value>
                <fullName>2 Semesters (full academic year)</fullName>
            </value>
            <value>
                <fullName>Not sure yet.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>