unpackaged/main/default/objects/Enrollment_Record__c/fields/z_Old_Phone__c.field-meta.xml
<CustomField>
    <fullName>z_Old_Phone__c</fullName>
    <formula>Student_Account__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>To update go the Student&#39;s Account.</inlineHelpText>
    <label>z_Old Phone</label>
    <type>Text</type>
</CustomField>