unpackaged/main/default/objects/Enrollment_Record__c/fields/z_Partner_School_Choice_1__c.field-meta.xml
<CustomField>
    <fullName>z_Partner_School_Choice_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>z_Partner School Choice 1</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Enrollment Records (Partner School Choice 1)</relationshipLabel>
    <relationshipName>Enrollment_Records2</relationshipName>
    <type>Lookup</type>
</CustomField>