unpackaged/main/default/objects/Enrollment_Record__c/fields/z_Partner_School_Choice_2__c.field-meta.xml
<CustomField>
    <fullName>z_Partner_School_Choice_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>z_Partner School Choice 2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Enrollment Records (Partner School Choice 2)</relationshipLabel>
    <relationshipName>Enrollment_Records3</relationshipName>
    <type>Lookup</type>
</CustomField>