unpackaged/main/default/objects/Enrollment_Record__c/fields/z_Partner_School_Choice_3__c.field-meta.xml
<CustomField>
    <fullName>z_Partner_School_Choice_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>z_Partner School Choice 3</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Enrollment Records (Partner School Choice 3)</relationshipLabel>
    <relationshipName>Enrollment_Records4</relationshipName>
    <type>Lookup</type>
</CustomField>