unpackaged/main/default/objects/Enrollment_Record__c/fields/z_Partner_School_Choice_5_Why__c.field-meta.xml
<CustomField>
    <fullName>z_Partner_School_Choice_5_Why__c</fullName>
    <label>z_Partner School Choice 5: Why</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>