unpackaged/main/default/objects/Enrollment_Record__c/fields/z_Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>z_Payment_Plan__c</fullName>
    <label>z_Payment Plan?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Needs Plan</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>