unpackaged/main/default/objects/Enrollment_Record__c/fields/z_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>z_Payment_Status__c</fullName>
    <label>z_Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deposit Only</fullName>
            </value>
            <value>
                <fullName>Partial Payment</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Cancelled/Refunded</fullName>
            </value>
            <value>
                <fullName>Paid/Graduated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>