unpackaged/main/default/objects/Enrollment_Record__c/fields/z_Payment_Status_Notes__c.field-meta.xml
<CustomField>
    <fullName>z_Payment_Status_Notes__c</fullName>
    <label>z_Payment Status Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>