unpackaged/main/default/objects/Enrollment_Record__c/fields/z_Payment_Status_Notes_Second_Semester__c.field-meta.xml
<CustomField>
    <fullName>z_Payment_Status_Notes_Second_Semester__c</fullName>
    <label>z_Payment Status Notes (Second Semester)</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>