unpackaged/main/default/objects/Enrollment_Record__c/fields/z_Plan_to_Use_Outside_Scholarships__c.field-meta.xml
<CustomField>
    <fullName>z_Plan_to_Use_Outside_Scholarships__c</fullName>
    <label>z_Plan to Use Outside Scholarships</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>