unpackaged/main/default/objects/Enrollment_Record__c/fields/z_Please_explain_Allergies__c.field-meta.xml
<CustomField>
    <fullName>z_Please_explain_Allergies__c</fullName>
    <label>z_Please explain (Allergies)</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>