unpackaged/main/default/objects/Enrollment_Record__c/fields/z_Please_Explain_GPA__c.field-meta.xml
<CustomField>
    <fullName>z_Please_Explain_GPA__c</fullName>
    <label>z_Please Explain (GPA)</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>