unpackaged/main/default/objects/Enrollment_Record__c/fields/z_Please_Explain_Mental_Substance__c.field-meta.xml
<CustomField>
    <fullName>z_Please_Explain_Mental_Substance__c</fullName>
    <label>z_Please Explain (Mental/Substance)</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>