unpackaged/main/default/objects/Enrollment_Record__c/fields/z_Preferred_Name_or_Nickname__c.field-meta.xml
<CustomField>
    <fullName>z_Preferred_Name_or_Nickname__c</fullName>
    <description>Information pulled in from Application object.</description>
    <label>z_Preferred Name or Nickname</label>
    <length>100</length>
    <type>Text</type>
</CustomField>