unpackaged/main/default/objects/Enrollment_Record__c/fields/z_Preferred_Pronouns__c.field-meta.xml
<CustomField>
    <fullName>z_Preferred_Pronouns__c</fullName>
    <description>Information pulled in from the Application record</description>
    <label>z_Preferred Pronouns</label>
    <length>100</length>
    <type>Text</type>
</CustomField>