unpackaged/main/default/objects/Enrollment_Record__c/fields/z_SAT_Score__c.field-meta.xml
<CustomField>
    <fullName>z_SAT_Score__c</fullName>
    <label>z_SAT Score</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>