unpackaged/main/default/objects/Enrollment_Record__c/fields/z_Second_Semester_Destination__c.field-meta.xml
<CustomField>
    <fullName>z_Second_Semester_Destination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>z_Second Semester Destination</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Location__c.Status__c</field>
            <operation>equals</operation>
            <value>Actively Enrolling</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Enrollment Records (Second Semester Destination)</relationshipLabel>
    <relationshipName>Enrollment_Records1</relationshipName>
    <type>Lookup</type>
</CustomField>