unpackaged/main/default/objects/Enrollment_Record__c/fields/z_Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>z_Shipping_City__c</fullName>
    <formula>Student_Account__r.ShippingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>To update go to the Student&#39;s Account</inlineHelpText>
    <label>z_Shipping City</label>
    <type>Text</type>
</CustomField>