unpackaged/main/default/objects/Enrollment_Record__c/fields/z_Shipping_Country__c.field-meta.xml
<CustomField>
    <fullName>z_Shipping_Country__c</fullName>
    <formula>Student_Account__r.ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>z_Shipping Country</label>
    <type>Text</type>
</CustomField>