unpackaged/main/default/objects/Enrollment_Record__c/fields/z_Shipping_State_Province__c.field-meta.xml
<CustomField>
    <fullName>z_Shipping_State_Province__c</fullName>
    <formula>Student_Account__r.ShippingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>To update go to the Student&#39;s Account</inlineHelpText>
    <label>z_Shipping State/Province</label>
    <type>Text</type>
</CustomField>