unpackaged/main/default/objects/Enrollment_Record__c/fields/z_Shipping_Street__c.field-meta.xml
<CustomField>
    <fullName>z_Shipping_Street__c</fullName>
    <formula>Student_Account__r.ShippingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>To update go to the Student&#39;s Account</inlineHelpText>
    <label>z_Shipping Street</label>
    <type>Text</type>
</CustomField>