unpackaged/main/default/objects/Enrollment_Record__c/fields/z_Shipping_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>z_Shipping_Zip_Postal_Code__c</fullName>
    <formula>Student_Account__r.ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>To update go to the Student&#39;s Account</inlineHelpText>
    <label>z_Shipping Zip/Postal Code</label>
    <type>Text</type>
</CustomField>