unpackaged/main/default/objects/Enrollment_Record__c/fields/z_Student_s_Family_Support_Situation__c.field-meta.xml
<CustomField>
    <fullName>z_Student_s_Family_Support_Situation__c</fullName>
    <label>z_Student&#39;s Family/Support Situation?</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>