unpackaged/main/default/objects/Enrollment_Record__c/fields/z_Student_s_hobbies_or_interests__c.field-meta.xml
<CustomField>
    <fullName>z_Student_s_hobbies_or_interests__c</fullName>
    <label>z_Student&#39;s hobbies or interests</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>