unpackaged/main/default/objects/Enrollment_Record__c/fields/z_T_Shirt_Other__c.field-meta.xml
<CustomField>
    <fullName>z_T_Shirt_Other__c</fullName>
    <label>z_T-Shirt: Other</label>
    <length>50</length>
    <type>Text</type>
</CustomField>