unpackaged/main/default/objects/Enrollment_Record__c/fields/z_T_shirt_Size__c.field-meta.xml
<CustomField>
    <fullName>z_T_shirt_Size__c</fullName>
    <description>This data is sumitted via the Enrollment Form</description>
    <label>z_T-shirt Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>X-Large</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>