unpackaged/main/default/objects/Enrollment_Record__c/fields/Z_Text_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Z_Text_First_Name__c</fullName>
    <label>Z_First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>