unpackaged/main/default/objects/Enrollment_Record__c/fields/z_Text_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>z_Text_Last_Name__c</fullName>
    <label>z_Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>