unpackaged/main/default/objects/Enrollment_Record__c/fields/z_Thoughts_on_Major__c.field-meta.xml
<CustomField>
    <fullName>z_Thoughts_on_Major__c</fullName>
    <label>z_Thoughts on Major</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>