unpackaged/main/default/objects/Enrollment_Record__c/fields/z_Welcome_Packet_Sent__c.field-meta.xml
<CustomField>
    <fullName>z_Welcome_Packet_Sent__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <label>z_Welcome Packet Sent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>