unpackaged/main/default/objects/Enrollment_Record__c/fields/z_What_drew_this_student_to_Verto__c.field-meta.xml
<CustomField>
    <fullName>z_What_drew_this_student_to_Verto__c</fullName>
    <label>z_What drew this student to Verto?</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>