unpackaged/main/default/objects/Enrollment_Record__c/fields/z_Why_no_semester_location_confirmed__c.field-meta.xml
<CustomField>
    <fullName>z_Why_no_semester_location_confirmed__c</fullName>
    <label>z_Why no semester location confirmed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Need more information</fullName>
            </value>
            <value>
                <fullName>Major dependent</fullName>
            </value>
            <value>
                <fullName>More than one destination</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>