unpackaged/main/default/objects/Enrollment_Record__c/fields/z_Withdrawal_Intent_Stated_to_Staff__c.field-meta.xml
<CustomField>
    <fullName>z_Withdrawal_Intent_Stated_to_Staff__c</fullName>
    <label>z_Withdrawal Intent Stated to Staff</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Withdrawal_Intent_Stated_Staff</valueSetName>
    </valueSet>
</CustomField>