unpackaged/main/default/objects/Enrollment_Record__c/fields/z_Withdrawal_Reasoning__c.field-meta.xml
<CustomField>
    <fullName>z_Withdrawal_Reasoning__c</fullName>
    <label>z_Withdrawal Reasoning</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Withdrawal_Reasoning</valueSetName>
    </valueSet>
</CustomField>