unpackaged/main/default/objects/Enrollment_Record__c/fields/z_Withdrawal_Supporting_Details__c.field-meta.xml
<CustomField>
    <fullName>z_Withdrawal_Supporting_Details__c</fullName>
    <label>z_Withdrawal Supporting Details</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>