unpackaged/main/default/objects/Enrollment_Record__c/fields/z_Your_College_and_Career_Goals__c.field-meta.xml
<CustomField>
    <fullName>z_Your_College_and_Career_Goals__c</fullName>
    <label>z_Your College and Career Goals</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>