unpackaged/main/default/objects/Enrollment_Record__c/recordTypes/Additional_Semester.recordType-meta.xml
<RecordType>
    <fullName>Additional_Semester</fullName>
    <active>true</active>
    <description>Default Record Type for Additional Verto Semesters</description>
    <label>Additional Semester</label>
</RecordType>