unpackaged/main/default/objects/Enrollment_Record__c/recordTypes/First_Semester.recordType-meta.xml
<RecordType>
    <fullName>First_Semester</fullName>
    <active>true</active>
    <description>Default Record Type for the First Semester</description>
    <label>First Semester</label>
</RecordType>