unpackaged/main/default/objects/Enrollment_Record__c/validationRules/Opportunity_Cannot_be_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Cannot_be_Changed</fullName>
    <active>true</active>
    <description>Once the Opportunity field is filled, it can&#39;t be edited.</description>
    <errorConditionFormula>and(
$User.Bypass_Validation__c = false,

not(isblank(priorvalue(Opportunity__c))),

ischanged( Opportunity__c )
)</errorConditionFormula>
    <errorDisplayField>Opportunity__c</errorDisplayField>
    <errorMessage>The opportunity can&#39;t be edited.</errorMessage>
</ValidationRule>