unpackaged/main/default/objects/Enrollment_Record__c/validationRules/Program_Must_be_Populated.validationRule-meta.xml
<ValidationRule>
    <fullName>Program_Must_be_Populated</fullName>
    <active>true</active>
    <errorConditionFormula>and(
$User.Bypass_Validation__c = false,

isblank( Program__c ),

or(isnew(),
ischanged( Program__c )
)
)</errorConditionFormula>
    <errorDisplayField>Program__c</errorDisplayField>
    <errorMessage>The Program field must always be filled.</errorMessage>
</ValidationRule>