unpackaged/main/default/objects/Enrollment_Record__c/listViews/Additional_Semester_Record_Type.listView-meta.xml
<ListView>
    <fullName>Additional_Semester_Record_Type</fullName>
    <columns>NAME</columns>
    <columns>Students_Name__c</columns>
    <columns>Program__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>PEA_Signed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Enrollment_Record__c.Additional_Semester</value>
    </filters>
    <label>Additional Semester Record Type</label>
</ListView>