unpackaged/main/default/objects/Enrollment_Record__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Students_Name__c</columns>
    <columns>X90_Day_Semester__c</columns>
    <columns>Passport_Status__c</columns>
    <columns>Visa_Appointment_Date_Mail_In_Date__c</columns>
    <columns>Visa_Appointment_Needed__c</columns>
    <columns>Visa_Appointment_Type__c</columns>
    <columns>Visa_Documents_Sent_Date__c</columns>
    <columns>Visa_Notes__c</columns>
    <columns>Visa_Recieved__c</columns>
    <columns>Visa_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>School_of_Record__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>