unpackaged/main/default/objects/Enrollment_Record__c/listViews/College_Planning_Form_Link_Missing.listView-meta.xml
<ListView>
    <fullName>College_Planning_Form_Link_Missing</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>College_Planning_Form_Link__c</field>
        <operation>equals</operation>
    </filters>
    <label>College Planning Form Link Missing</label>
    <sharedTo>
        <role>Revenue_Operations</role>
    </sharedTo>
</ListView>