unpackaged/main/default/objects/Enrollment_Record__c/listViews/Enrollment_Record_Link_Missing.listView-meta.xml
<ListView>
    <fullName>Enrollment_Record_Link_Missing</fullName>
    <columns>NAME</columns>
    <columns>Enrollment_Form_Link__c</columns>
    <columns>F_Enrollment_Form_Link__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Enrollment_Form_Link__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>notEqual</operation>
        <value>Enrollment_Record__c.Additional_Semester</value>
    </filters>
    <label>Enrollment Form Link Missing</label>
    <sharedTo>
        <role>Revenue_Operations</role>
    </sharedTo>
</ListView>