unpackaged/main/default/objects/Enrollment_Record__c/listViews/Financial_Appeals_Form_Link_Missing.listView-meta.xml
<ListView>
    <fullName>Financial_Appeals_Form_Link_Missing</fullName>
    <columns>NAME</columns>
    <columns>Financial_Appeal_Form_Link__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Z_Confirmed_First_Semester__c</field>
        <operation>equals</operation>
        <value>Spring 2021,Fall 2021,Spring 2022</value>
    </filters>
    <filters>
        <field>Financial_Appeal_Form_Link__c</field>
        <operation>equals</operation>
    </filters>
    <label>Financial Appeals Form Link Missing</label>
    <sharedTo>
        <role>Revenue_Operations</role>
        <role>System_Integrations</role>
    </sharedTo>
</ListView>